trying to avoid vim bug, moved make logic to bash
* found cabal doesnt seem to support the require-sandbox flag in its
  config file. had to remove made a 1.18 cabal config in case valid
  config files are version dependent
* moved makefile logic to refresh.sh. i think a makefile is kind of overkill
  for this, and i no longer think its execution model is terribly relevant
* added some aliases to profiles
* removed .netrwhist from vim config, which is created by vim and not
  something i need to backup. also found the upside-down T movement keys
  seem to interact poorly with other remappings, and so i commented them
  out for now.

--- a/cabal/config
+++ b/cabal/config
@@ -41,7 +41,7 @@ executable-profiling: True
 -- constraint:
 -- preference:
 -- solver: choose
--- documentation: False
+documentation: True
 -- doc-index-file: $datadir/doc/index.html
 -- max-backjumps: 200
 -- reorder-goals: False
@@ -60,6 +60,8 @@ remote-build-reporting: anonymous
 -- jobs:
 -- username:
 -- password:
+
+-- require-sandbox: True
 
 install-dirs user
   -- prefix: /home/malcolm/.cabal
