changes to gitconfig
Updated gitconfig to use the same style of code modularity as is used in other
modules. Now .gitconfig simply sources gitconfig in the repo

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,5 +1,2 @@
-[user]
-	email = goodingm@gmail.com
-	name = Malcolm Gooding
-[core]
-	editor = vim
+[include]
+    path = ~/gits/fresh-install/git/config.git
