fixing some previous issues with sandboxes
cabal config updated with some better options
aliases now intercepts "cabal sandbox init", so that if a sandbox is already
active it will warn rather than overwriting the previous sandbox
the prompt now shows n/a if no sandbox is active, and nothing if the global
sandbox is active

--- a/cabal/config
+++ b/cabal/config
@@ -10,7 +10,6 @@
 -- Cabal library version: 1.22.0.0
 -- cabal-install version: 1.22.0.0
 
-
 require-sandbox: True
 -- ignore-sandbox: False
 remote-repo: hackage.haskell.org:http://hackage.haskell.org/packages/archive
@@ -54,7 +53,7 @@ tests: True
 -- preference:
 -- solver: choose
 -- allow-newer: False
--- documentation: False
+documentation: True
 -- doc-index-file: $datadir/doc/$arch-$os-$compiler/index.html
 -- max-backjumps: 2000
 -- reorder-goals: False
