fixed a bug in .ghci changed vim-ide session in tmux to "ctrl-\ v" added re-source settings to vim as "\r"

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -32,8 +32,9 @@ set -g visual-activity on
 # force a reload of the config file with <C-a>r
 unbind r
 bind r source-file ~/.tmux.conf
-# load session 1 with <C-a>1
-bind R source-file ~/gits/fresh-install/tmux/session1
+#
+# load vim-ide style session with <C-\>v
+bind v source-file ~/gits/fresh-install/tmux/session1
 
 # ut8 is on
 # set -g utf8 on
