--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -13,9 +13,9 @@ setw -g mode-keys vi
 set -g default-terminal "screen-256color"
 
 # remap prefix to C-a
-set -g prefix 'C-\'
+set -g prefix 'C-space'
 unbind C-b
-bind 'C-\' send-prefix
+bind 'C-space' send-prefix
 
 # set history limit to 100k
 set -g history-limit 100000
