added ] vim control to tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,6 +41,7 @@ bind-key -T prefix + select-layout main-vertical
 bind-key -T prefix = select-layout main-horizontal
 bind-key -T prefix z resize-pane -Z
 bind-key -T prefix q display-panes
+bind-key -T prefix ] copy-mode
 
 # turns off all keybindings until C-a is hit again. this is useful for nested
 # tmux sessions, so that you can ensure your commands are getting to the inner
