--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -60,8 +60,15 @@ bind-key -T root 'C-a' \
    unbind-key -T root 'C-j' \; \
    unbind-key -T root 'C-k' \; \
    unbind-key -T root 'C-l' \; \
+   set-option -g status-bg red \; \
+   set-option -g pane-active-border-bg red \; \
+   set-option -g pane-border-bg red \; \
    bind-key -T root 'C-a' run-shell "tmux display-message 'keybindings on'; tmux source-fil ~/.tmux.conf"
 # FIXME statusbar
+
+
+# messages need to display for longer I think, so increase that
+set-option -g display-time 1500
 
 # These let you use <C-h/j/k/l> to switch between tmux panes, or vim panes if
 # running vim. <C-space><C-h/j/k/l> will also accomplish the same thing, duet
