--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -53,8 +53,8 @@ bind-key -T prefix ] copy-mode
 #
 # links:
 # http://stahlke.org/dan/tmux-nested/
+# https://medium.freecodecamp.org/tmux-in-practice-local-and-nested-remote-tmux-sessions-4f7ba5db8795
 bind-key -T root 'C-a' \
-   display-message "keybindings off" \; \
    set-option -g -u prefix \; \
    unbind-key -T root 'C-h' \; \
    unbind-key -T root 'C-j' \; \
@@ -63,12 +63,20 @@ bind-key -T root 'C-a' \
    set-option -g status-bg red \; \
    set-option -g pane-active-border-bg red \; \
    set-option -g pane-border-bg red \; \
-   bind-key -T root 'C-a' run-shell "tmux display-message 'keybindings on'; tmux source-fil ~/.tmux.conf"
+   set-option -g status-right '"#{=21:pane_title}"' \; \
+   bind-key -T root 'C-a' source-file ~/.tmux.conf
 # FIXME statusbar
+
+set-option -g status-right '"#{=21:pane_title}" %H:%M %d-%b-%y'
+
+# the session name
+set-option -g status-left '[#S] '
+set-option -g window-status-current-format '#I:#W'
+set-option -g window-status-current-bg green
 
 
 # messages need to display for longer I think, so increase that
-set-option -g display-time 1500
+set-option -g display-time 15000
 
 # These let you use <C-h/j/k/l> to switch between tmux panes, or vim panes if
 # running vim. <C-space><C-h/j/k/l> will also accomplish the same thing, duet
