fixed a typo, also made vim/tmux use foldmethod=manual

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,12 @@
 
+# Replace the existing .tmux.conf file with this single command, replacing
+# $DOTFILES with the directory you keep your dotfiles under. this is useful
+# for keeping them under version control
+# for keeping your dotfiles under version control
+#
+# ~/.tmux.conf:
+# >>> source-file $DOTFILES/tmux/tmux.conf
+
 # unbind all keys. this is useful if you bind a key while playing with your
 # dotfile, and later remove it, as it ensures that removing a binding from your
 # dotfile removes it from tmux. it also ensures that all keybindings are in
@@ -28,7 +36,7 @@ bind-key -T prefix ? list-keys
 # tmux shell (to ensure you can use tmux to manage both your host system and
 # the remote system).
 bind-key -T prefix 'C-space' send-prefix
-bind-key -T prefix 'C-h' send-keys 'C-a'
+bind-key -T prefix 'C-h' send-keys 'C-h'
 bind-key -T prefix 'C-j' send-keys 'C-j'
 bind-key -T prefix 'C-k' send-keys 'C-k'
 bind-key -T prefix 'C-l' send-keys 'C-l'
@@ -67,10 +75,18 @@ bind-key -T root 'C-a' \
    bind-key -T root 'C-a' source-file ~/.tmux.conf
 # FIXME statusbar
 
-set-option -g status-right '"#{=21:pane_title}" %H:%M %d-%b-%y'
+# uname -n
+set-option -g status-right '"#{=21:USER}" %H:%M %d-%b-%y'
+set-option -g status-style "bg=black fg=white"
+
+set-option -g pane-active-border-fg green
+set-option -g pane-active-border-bg black
+set-option -g pane-border-fg default
+set-option -g pane-border-bg default
 
 # the session name
 set-option -g status-left '[#S] '
+set-option -g status-left-length 15
 set-option -g window-status-current-format '#I:#W'
 set-option -g window-status-current-bg green
 
@@ -93,12 +109,6 @@ setw -g mode-keys vi
 
 # fixes issue with terminal colors
 set -g default-terminal "screen-256color"
-
-set-option -g pane-active-border-fg green
-set-option -g pane-active-border-bg green
-set-option -g pane-border-fg default
-set-option -g pane-border-bg default
-set-option -g status-bg yellow
 
 # set -g window-style 'fg=colour247,bg=colour236'
 # set -g window-active-style 'fg=colour250,bg=black'
