minor feature changes
made fish shell prompt work better with dark colors
made tmux "create default panes/layout" command

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -41,10 +41,6 @@ bind-key -T prefix 'C-j' send-keys 'C-j'
 bind-key -T prefix 'C-k' send-keys 'C-k'
 bind-key -T prefix 'C-l' send-keys 'C-l'
 
-bind-key -T prefix + split-window -h -p 50 -t 0 \; \
-                     split-window -v -p 66 -t 1 \; \
-                     split-window -v -p 50 -t 2 \; \
-                     select-pane -t 0
 bind-key -T prefix + select-layout main-vertical
 bind-key -T prefix = select-layout main-horizontal
 bind-key -T prefix z resize-pane -Z
@@ -136,10 +132,16 @@ set-option -g main-pane-width 95
 # cw: creates a new named window, based on the user input
 # cs: create a new named session, based on the user input
 
+
 # creating a new window or session will prompt for a name for the
 # session/window, rather than creating one numerically.
 bind-key -T prefix_c w command-prompt "new-window -n '%%' -c '#{pane_current_path}'"
 bind-key -T prefix_c s command-prompt "new -s '%%' -c '#{pane_current_path}'"
+bind-key -T prefix_c p split-window \; \
+                       split-window \; \
+                       split-window \; \
+                       select-layout main-vertical \; \
+                       select-pane -t 0
 bind-key -T prefix   | split-window -h -c '#{pane_current_path}'
 bind-key -T prefix   - split-window -v -c '#{pane_current_path}'
 bind-key -T prefix   c switch-client -T prefix_c
